# testenv-metal

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/events/: workflow_trigger.sh  wtrig_scl-metal.sh  wtrig_tools.sh
.github/workflows/: build.yml  build_test.yml  freedom_env.yml  llvm_toolchain.yml
bsp/qemu-arty-e31/dts/: qemu.dts
bsp/qemu-arty-e31/include/metal/: machine.h
bsp/qemu-arty-e31/include/metal/machine/: inline.h  platform.h
bsp/qemu-arty-e31/ld/: metal.ld
bsp/qemu-arty-s51/dts/: qemu.dts
bsp/qemu-arty-s51/include/metal/: machine.h
bsp/qemu-arty-s51/include/metal/machine/: inline.h  platform.h
bsp/qemu-arty-s51/ld/: metal.ld
bsp/qemu-sifive-e31/dts/: qemu.dts
bsp/qemu-sifive-e31/include/metal/: machine.h
bsp/qemu-sifive-e31/ld/: metal.ld
bsp/qemu-sifive-s51/dts/: qemu.dts
bsp/qemu-sifive-s51/include/metal/machine/: platform.h
bsp/qemu-sifive_e_rv32/: platform.def
bsp/qemu-sifive_e_rv32/dts/: core.dts  qemu.dts
bsp/qemu-sifive_e_rv32/include/: clock_dispatch.h
bsp/qemu-sifive_e_rv32/include/metal/: interrupt_handlers.h  machine.h  platform.h
bsp/qemu-sifive_e_rv32/include/metal/machine/: inline.h  platform.h
bsp/qemu-sifive_e_rv32/include/metal/platform/: metal_platform_fixed_clock.h  metal_platform_fixed_factor_clock.h  metal_platform_riscv_clint0.h  metal_platform_riscv_cpu_intc.h  metal_platform_sifive_clic0.h  metal_platform_sifive_error0.h  metal_platform_sifive_fe310_g000_hfxosc.h  metal_platform_sifive_fe310_g000_lfrosc.h  metal_platform_sifive_hca0.h  metal_platform_sifive_i2c0.h  metal_platform_sifive_pwm0.h  metal_platform_sifive_uart0.h
bsp/qemu-sifive_e_rv32/include/metal/private/: metal_private_cache.h  metal_private_hca0.h  metal_private_pmp.h  metal_private_sifive_buserror0.h  metal_private_sifive_fe310_g000_lfrosc.h  metal_private_sifive_gpio0.h  metal_private_sifive_hca0.h  metal_private_sifive_i2c0.h  metal_private_sifive_spi0.h  metal_private_switch.h
bsp/qemu-sifive_e_rv32/ld/: metal.ld
bsp/qemu-sifive_e_rv32/src/: interrupt_handlers.c  interrupt_table.c  jump_table.S
bsp/qemu-sifive_e_rv64/: platform.def
bsp/qemu-sifive_e_rv64/dts/: core.dts  design.dts  qemu.dts
bsp/qemu-sifive_e_rv64/include/metal/: interrupt_handlers.h  machine.h  platform.h
bsp/qemu-sifive_e_rv64/include/metal/platform/: metal_platform_riscv_plic0.h  metal_platform_sifive_ccache0.h  metal_platform_sifive_fe310_g000_prci.h  metal_platform_sifive_fu540_c000_l2.h  metal_platform_sifive_gpio0.h  metal_platform_sifive_hca0.h  metal_platform_sifive_test0.h
bsp/qemu-sifive_e_rv64/include/metal/private/: metal_private_cpu.h  metal_private_fixed_clock.h  metal_private_gpio.h  metal_private_i2c.h  metal_private_led.h  metal_private_pwm.h  metal_private_riscv_cpu.h  metal_private_riscv_plic0.h  metal_private_rtc.h  metal_private_sifive_fe310_g000_hfrosc.h  metal_private_sifive_fe310_g000_hfxosc.h  metal_private_sifive_fe310_g000_pll.h  metal_private_sifive_gpio_leds.h  metal_private_sifive_gpio_switches.h  metal_private_sifive_hca0.h  metal_private_sifive_pwm0.h  metal_private_spi.h  metal_private_ucb_htif0.h  metal_private_watchdog.h
bsp/qemu-sifive_e_rv64/ld/: metal.ld
bsp/qemu-sifive_e_rv64/src/: interrupt_table.c
bsp/qemu-sifive_e_rv64x2/dts/: core.dts  qemu.dts
bsp/qemu-sifive_e_rv64x2/include/: interrupt_dispatch.h
bsp/qemu-sifive_e_rv64x2/include/metal/: machine.h
bsp/qemu-sifive_e_rv64x2/include/metal/machine/: inline.h  platform.h
bsp/qemu-sifive_e_rv64x2/include/metal/platform/: metal_platform_sifive_aon0.h  (+8 more)
bsp/qemu-sifive_e_rv64x2/ld/: metal.ld
bsp/qemu-sifive_e_rv64x2/src/: interrupt_handlers.c
cmake/: macros.cmake  riscv.cmake  testenv.cmake
cmake/Platform/: metal.cmake
cmake/files/scl-metal/: CMakeLists.txt
cmake/files/scl-metal/tests/: CMakeLists.txt
cmake/files/test-scl-metal/tests/: CMakeLists.txt
cmake/files/tests/: CMakeLists.txt
cmake/files/tests/scl-metal/: CMakeLists.txt
cmake/files/unity/: CMakeLists.txt
docker/conf/: build.conf  utest.conf
docker/exec/: devenv.docker  docker.conf  freedom-dev.docker  freedom.docker
docker/src/: binutils-riscv-v2.35.docker  binutils-riscv-v2.35.dockerfile  binutils-riscv-v2.dockerfile  clang-riscv-v10.0.1.docker  clang-riscv-v10.0.1.dockerfile  clang-riscv-v10.sh  clang-riscv-v11.0.0.dockerfile  clang-riscv-v11.dockerfile  clang-riscv-v11.sh  clang-riscv32-v10.0.1.dockerfile  clang-riscv32-v11.0.0.dockerfile  clang-riscv32-v11.dockerfile  clang-riscv64-v10.0.1.dockerfile  clang-riscv64-v10.sh  clang-riscv64-v11.0.0.dockerfile  clang-riscv64-v11.dockerfile  clang-v10.0.1.docker  clang-v11.0.0.dockerfile  freedom-dev.dockerfile  freedom-test.dockerfile  llvm-riscv-v10.0.1.docker  llvm-riscv-v10.0.1.dockerfile  llvm-riscv-v11.dockerfile  newlib-v3.3.dockerfile
freedom-metal/: CMakeLists.txt
freedom-metal/gloss/: CMakeLists.txt
gloss/: CMakeLists.txt
metal/: CMakeLists.txt
pico/: CMakeLists.txt
scripts/: build.sh  buildall.sh  elf2qemu.py  funcs.sh  gh_setenv.sh  jsontree.py  objmod2h.j2  objmod2h.py  utest.sh  utestall.sh
scripts/omtools/: __init__.py  generator.py  model.py  objmod2h.j2  parser.py
scripts/omtools/devices/: __init__.py  generic.py  plic.py
scripts/omtools/om/: __init__.py  generator.py  misc.py  model.py  parser.py
scripts/omtools/om/devices/: __init__.py  hca.py  plic.py
scripts/omtools/templates/: autotest.j2  definitions.j2  definitions_narrow.j2  device.j2  device_narrow.j2  device_plic.j2  platform.j2
tests/: CMakeLists.txt
tests/dma/: CMakeLists.txt
tests/dma/src/: dma.c
tests/hca/: CMakeLists.txt  src
tests/hca/include/: unity.h  unity_fixture.h
tests/hca/src/: hca.c
tests/hello/: CMakeLists.txt
tests/hello/src/: cmdenv.c  cmdline.S  hello.c
tests/qemu/: CMakeLists.txt
tests/qemu/include/: hca_macro.h
tests/qemu/src/: dma.c  dma_aes.c  dma_aes_ecb.c  dma_aes_gcm.c  dma_aes_gcm.py  dma_sha.c  dma_sha.py  dma_sha256.c  dma_sha512.c  dma_test.h  qemu.c  qemu.h  secmain.S  time.c  trng.c
tests/trng/: CMakeLists.txt
tests/trng/src/: trng.c
(+13 files in other folders)
