ADD_LIBRARY (metal-gloss
  src/crt0.S
  src/nanosleep.c
  src/sys_access.c
  src/sys_chdir.c
  src/sys_chmod.c
  src/sys_chown.c
  src/sys_clock_gettime.c
  src/sys_close.c
  src/sys_execve.c
  src/sys_exit.c
  src/sys_faccessat.c
  src/sys_fork.c
  src/sys_fstat.c
  src/sys_fstatat.c
  src/sys_ftime.c
  src/sys_getcwd.c
  src/sys_getpid.c
  src/sys_gettimeofday.c
  src/sys_isatty.c
  src/sys_kill.c
  src/sys_link.c
  src/sys_lseek.c
  src/sys_lstat.c
  src/sys_open.c
  src/sys_openat.c
  src/sys_read.c
  src/sys_sbrk.c
  src/sys_stat.c
  src/sys_sysconf.c
  src/sys_times.c
  src/sys_unlink.c
  src/sys_utime.c
  src/sys_wait.c
  src/sys_write.c
)
